Fix for bug 79961 - Resizing outliner column width makes other columns collapsed to minimum.

- moved frame-CaptureMouse(PR_TRUE) from first MouseMove() to MouseDown()
to catch first MouseMove()  event directly in splitter frame.

r=bryner, sr=blake, a=roc+moz